# ash

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  build.rs  package-lock.json  package.json
.changeset/: README.md  agentic-github-workflow.md  bright-statuslines-breathe.md  clever-claude-docs.md  config.json  fuzzy-codex-auth.md  quiet-rivers-stream.md  smart-carrots-provide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-issue-intake.yml  agent-project-worker.yml  ci.yml  docs-pages.yml  github-release.yml  version-packages.yml
agent-bridges/anthropic/: bridge.test.ts  bridge.ts  cli-compiled.template.ts  cli.ts  package.json
docs/: agentic-github-workflow.md  architecture.md  astro.config.mjs  package.json
docs/content/: configuration.mdx  development.mdx  docs.json  getting-started.mdx  index.mdx
migrations/00000000000001_create_context_events/: down.sql  up.sql
scripts/: create-release-tag.mjs  github-project-agent.mjs  install-agent.sh  install-manual.sh  sync-cargo-version.mjs
src/: agent.rs  anthropic_agent.rs  codex_native.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  permissions.rs  plugins.rs  providers.rs  schema.rs  session.rs  setup.rs  spinners.rs  statusline.rs  stream.rs  ui.rs
src/shell/: ast.rs  evaluator.rs  expander.rs  lexer.rs  mod.rs  parser.rs
tests/: cli_eval.rs  interactive_agent.rs  provider_setup.rs
(+11 files in other folders)
