[package]
name = "ash"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "Agentic Shell"
license = "MIT"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
diesel = { version = "=2.3.10", features = ["sqlite"] }
diesel_migrations = { version = "=2.3.2", features = ["sqlite"] }
thiserror = "=2.0.18"

[dev-dependencies]
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
